Started integration of email service

--- a/GDP_API/appsettings.json
+++ b/GDP_API/appsettings.json
@@ -11,5 +11,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings":
+{
+   "Host": "smtp.gmail.com",
+   "Puerto": 587,
+   "NameSend": "LoginApp",
+   "Email": "apistest1130@gmail.com",
+   "Password": "wqbqrmqsuikzvweh"
+ }
 }
