Updated appsettings to fit new login

--- a/GDP_API/appsettings.json
+++ b/GDP_API/appsettings.json
@@ -14,10 +14,7 @@
   "AllowedHosts": "*",
   "EmailSettings":
 {
-   "Host": "smtp.gmail.com",
-   "Puerto": 587,
-   "NameSend": "LoginApp",
-   "Email": "apistest1130@gmail.com",
-   "Password": "wqbqrmqsuikzvweh"
+   "MailgunAPIKey": "",
+    "MailgunDomain": ""
  }
 }
