--- a/.gitignore
+++ b/.gitignore
@@ -355,7 +355,8 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
-Migrations/*
+*/Migrations/*
+GDP_API/Migrations/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
